Custom--app/main/default/objects/Region_Configuration__c/Region_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for generating the nightly Yardi CSV Reports.  This needs to be updated when new Funds are created.</description>
    <label>Region Configuration</label>
</CustomObject>