Custom--app/main/default/objects/Region_Configuration__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>