Custom--app/main/default/objects/Region_Configuration__c/fields/Bank_Code_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code_Suffix__c</fullName>
    <label>Bank Code Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>