Custom--app/main/default/objects/Region_Configuration__c/fields/Region_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Short_Name__c</fullName>
    <label>Region Short Name</label>
    <length>5</length>
    <type>Text</type>
</CustomField>